--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babylonjs": "3.1.1"
+    "babylonjs": "^4.1.0",
+    "babylonjs-loaders": "^4.1.0"
   },
   "devDependencies": {
-    "electron": "4.0.0",
-    "electron-builder": "20.38.5",
-    "typescript": "2.6.2"
+    "electron": "10.1.3",
+    "electron-builder": "22.8.1",
+    "typescript": "3.9.7"
   },
   "build": {
     "appId": "yourappid",
