--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "babylonjs": "^4.1.0",
-    "babylonjs-loaders": "^4.1.0"
-  },
   "devDependencies": {
+    "@babylonjs/core": "^5.12.1",
+    "@babylonjs/loaders": "^5.12.1",
     "electron": "10.1.3",
     "electron-builder": "22.8.1",
     "typescript": "3.9.7"
